# lab4pp

./: LPNU38-LB4-1.0.0-resolved (1).yaml  LPNU38-LB4-1.0.0-resolved.json  alembic.ini  main.py  pyproject.toml  valid_schm.py
alembic/: env.py
alembic/versions/: 3f51ab8cf87b_.py  45aa86658237_.py  8aea82dfcfaf_.py
apischm/: ad.py  authentification.py  tablets.py  user.py
databaseinf/: inserts.py  tablets.py
