[tool.poetry]
name = "pp4"
version = "0.1.0"
description = ""
authors = ["oleh17v <burik15v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.27"
bcrypt = "^3.2.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
